# study-pal

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  docker-compose.yml
api/: .dockerignore  Dockerfile  config.py  dependencies.py  main.py  openapi_export.py  pyproject.toml
api/migrations/: 0001_spine.sql  0002_rls.sql  0003_bootstrap.sql  0004_cycles_scope_text.sql  0005_children_profile.sql  0006_question_marks.sql  0007_cycle_publish.sql  0008_gap_reports.sql  0009_study_packs.sql  0010_round_phase_cycles.sql  0011_round_phase_gap_reports.sql  0012_round_phase_study_packs.sql  0013_round_phase_assessments.sql
api/routers/: __init__.py  assessments.py  capture.py  child_results.py  cycles.py  families.py  gap_report.py  grading.py  health.py  kiosk_session.py  retest.py  review.py  study_pack.py  variant_b.py
api/schemas/: __init__.py  assessment_schema.py  capture.py  child_results.py  comparison.py  family.py  gap_report.py  generation.py  grading.py  health.py  identity.py  kiosk_session.py  review.py  study_pack.py  validation.py
api/services/: __init__.py  auth.py  capture_service.py  child_results.py  claude_client.py  comparison.py  cycle.py  gap_report.py  generation_service.py  grading.py  kiosk_session.py  pdf_service.py  phase.py  study_pack.py  validation_service.py
api/services/prompts/: generate_assessment_v1.md  generate_variant_b_v1.md
api/services/repositories/: __init__.py  base.py  memory.py  postgres.py  postgres_family.py  postgres_gap_report.py  postgres_marks.py  postgres_study_pack.py  postgres_submission.py
api/templates/: study_pack.html
api/tests/: conftest.py  test_auth_jwks.py  test_auth_stub.py  test_bootstrap_rls.py  test_capture.py  test_child_profile.py  test_child_results.py  test_fakeclaude_gap_tags.py  test_fixture_gate.py  test_gap_report.py  test_generation.py  test_grading.py  test_health.py  test_kiosk_session.py  test_phase_p2.py  test_repository.py  test_retest_postgres_repo_bugs.py  test_review.py  test_rls_isolation.py  test_round_phase.py  test_round_phase_p4_2.py  test_schema_hardening.py  test_spine_crud.py  test_study_pack.py  test_validate_assessment.py  test_variant_b.py
api/tests/samples/: afrikaans_sample.py  maths_sample.py
docs/: DESIGN.md  PROGRESS.md  auth-google-oauth-setup.md  production-readiness.md  studypal-build-plan.md  studypal-mvp-scope.md
fixtures/: README.md
web/: .env.example  Dockerfile  eslint.config.js  index.html  package.json  (+5 more)
(+93 files in other folders)
