[project]
name = "studypal-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.1",
    "pyjwt[crypto]>=2.9",
    "jinja2>=3.1",
    "weasyprint>=62.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# assessment_schema.py is the pre-existing single source of truth and must be
# left completely untouched (see task brief) — silence its pre-existing style
# nits rather than editing it.
[tool.ruff.lint.per-file-ignores]
"schemas/assessment_schema.py" = ["UP042", "UP037", "UP045", "E501", "SIM102", "UP007"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

# Never reformat the canonical schema file (task brief: leave it untouched).
[tool.ruff.format]
exclude = ["schemas/assessment_schema.py"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["."]
exclude = ["\\.venv"]

# Narrow override for the pre-existing canonical schema (must stay untouched):
# `@computed_field` stacked on `@property` isn't yet understood by mypy's
# property-decorator check, and one legacy field uses a bare `dict`. Both are
# accepted design choices in that file, not bugs — silenced only here, not
# globally.
[[tool.mypy.overrides]]
module = "schemas.assessment_schema"
disable_error_code = ["prop-decorator", "type-arg"]

# jinja2 and weasyprint ship their own stubs via mypy extensions; when the
# environment does not have types-* packages installed, ignore the missing stub
# errors rather than adding dev-only type-stub dependencies.
[[tool.mypy.overrides]]
module = ["jinja2", "jinja2.*", "weasyprint", "weasyprint.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Exclude the fixture_gate marker from the default run; use `make test-fixtures` for it.
addopts = "-m 'not fixture_gate'"
markers = [
    "fixture_gate: tests that enforce the /fixtures artefact gate (D-R3). Run via make test-fixtures.",
]

[tool.uv]
package = false
